loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:12: error: illegal start of simple expression
while(){
      ^LoopStairs:16: error: ')' expected but '}' found.
	}
        ^